feat[GEN-61]: Implementado as exceptions de projetos e tarefas